Style fix: give exclude/filter label commands background and do not overlap label

--- a/less/graph.less
+++ b/less/graph.less
@@ -279,6 +279,12 @@
                 visibility: hidden;
                 font-size: 0.8em;
                 color: @medium-grey;
+                background-color: #fff;
+                border-radius: 5px;
+                padding: 3px;
+                padding-left: 5px;
+                padding-right: 5px;
+                border: 1px solid rgb(51,51,102);
                 position: absolute;
                 &:hover {
                     color: @graphistry-lightblue;
@@ -286,10 +292,10 @@
                 }
             }
             .exclude-by-key-value {
-                right: 3em;
+                right: -2.5em;
             }
             .filter-by-key-value {
-                right: 1.6em;
+                right: -0.2em;
             }
         }
         &:hover .exclude-by-key-value, &:hover .filter-by-key-value {
